Fixing align skills and modify About text

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -31,6 +31,7 @@
     display: flex;
     gap: 1rem;
     justify-content: center;
+    align-items: baseline;
 }
 
 @media screen and (max-width: 1024px) {
